syntax = "proto3";

package wizard;

option go_package = "github.com/Alinoureddine1/mysticfunds/proto/wizard";

import "google/protobuf/timestamp.proto";

service WizardService {
  rpc CreateWizard(CreateWizardRequest) returns (Wizard) {}
  rpc GetWizard(GetWizardRequest) returns (Wizard) {}
  rpc UpdateWizard(UpdateWizardRequest) returns (Wizard) {}
  rpc ListWizards(ListWizardsRequest) returns (ListWizardsResponse) {}
  rpc DeleteWizard(DeleteWizardRequest) returns (DeleteWizardResponse) {}
  rpc JoinGuild(JoinGuildRequest) returns (Wizard) {}
  rpc LeaveGuild(LeaveGuildRequest) returns (Wizard) {}
}

message Wizard {
  int64 id = 1;
  int64 user_id = 2;
  string name = 3;
  string realm = 4;
  int64 mana_balance = 5;
  string element = 6;
  Guild guild = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message Guild {
  int64 id = 1;
  string name = 2;
}

message CreateWizardRequest {
  int64 user_id = 1;
  string name = 2;
  string realm = 3;
  string element = 4;
}

message GetWizardRequest {
  int64 id = 1;
}

message UpdateWizardRequest {
  int64 id = 1;
  string name = 2;
  string realm = 3;
  string element = 4;
}

message ListWizardsRequest {
  int32 page_size = 1;
  int32 page_number = 2;
}

message ListWizardsResponse {
  repeated Wizard wizards = 1;
  int32 total_count = 2;
}

message DeleteWizardRequest {
  int64 id = 1;
}

message DeleteWizardResponse {
  bool success = 1;
}

message JoinGuildRequest {
  int64 wizard_id = 1;
  string guild_name = 2;
}

message LeaveGuildRequest {
  int64 wizard_id = 1;
}